[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://online_mode/createQuiz_student/question_container.gd" type="Script" id=2]
[ext_resource path="res://online_mode/createQuiz_student/selected_container.tscn" type="PackedScene" id=3]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="question" type="HBoxContainer"]
script = ExtResource( 2 )
selected_question = ExtResource( 3 )
question_content = NodePath("VBoxContainer/question_container/question_content")
answer_content = NodePath("VBoxContainer/answer_container/answer_content")

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 115.0
theme = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_right = 1172.0
margin_bottom = 115.0
custom_constants/separation = 10

[node name="question_container" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1144.0
margin_bottom = 71.0

[node name="question_label" type="Label" parent="VBoxContainer/question_container"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Question: "

[node name="question_content" type="Label" parent="VBoxContainer/question_container"]
margin_left = 118.0
margin_right = 1143.0
margin_bottom = 71.0
rect_min_size = Vector2( 1025, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "lkasjdlasj dasdlaj sklasjd laksjdlasjdalk jalsk djlska djalskd jalks djaskld ajsd lkajd lkasdj alksd jalksd jaslkd jadlkja  dlkajs dlkadsj alksdj alksd jaldk jadlkjadk"
autowrap = true

[node name="answer_container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 1144.0
margin_bottom = 115.0

[node name="answer_label" type="Label" parent="VBoxContainer/answer_container"]
margin_right = 115.0
margin_bottom = 34.0
rect_min_size = Vector2( 115, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Answer: "

[node name="answer_content" type="Label" parent="VBoxContainer/answer_container"]
margin_left = 119.0
margin_right = 1144.0
margin_bottom = 34.0
rect_min_size = Vector2( 1025, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "asdaasdlk"
autowrap = true

[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
